Fixed positioning of content on smaller screens

--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,6 @@ body{
 
 #bg{
     position: absolute;
-    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -18,11 +17,6 @@ body{
 .container{
     color: whitesmoke;
     min-height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 }
 
 .content{
